--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h1>Register</h1>
+  <label for="cash">Cash Provided:</label>
+  <input type="number" id="cash" step="0.01">
+  <button id="purchase-btn">Purchase</button>
+  <p id="change-due"></p>
+  <script src="script.js"></script>
 </body>
 </html>
